// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`child.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- Not print correctly -->
>>> bar
>>> ===

- in list
    - in list
      heading
      =======
    - in list
      >>> heading
      >>> =======

=====================================output=====================================
<!-- Not print correctly -->

> > > bar
> > > ===

- in list
  - in list
    heading
    =======
  - in list
    > > > heading
    > > > =======

================================================================================
`;

exports[`definition-before.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- https://spec.commonmark.org/0.31.2/#example-215 -->
[foo]: /url1
[foo]: /url2
bar
===

[foo]: /url1
[foo]: /url2

bar
===

=====================================output=====================================
<!-- https://spec.commonmark.org/0.31.2/#example-215 -->

[foo]: /url1
[foo]: /url2
bar
===

[foo]: /url1
[foo]: /url2

bar
===

================================================================================
`;

exports[`issue-6013.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
Setext Heading 1
================

Setext Heading 2
----------------

## ATX Heading 2

=====================================output=====================================
Setext Heading 1
================

Setext Heading 2
----------------

## ATX Heading 2

================================================================================
`;

exports[`issue-6013-2.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
Heading
[![Shields.io badge](https://img.shields.io/badge/Shields.io-badge-brightgreen)](https://shields.io)
=======

=====================================output=====================================
Heading
[![Shields.io badge](https://img.shields.io/badge/Shields.io-badge-brightgreen)](https://shields.io)
=======

================================================================================
`;

exports[`setext.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
h1
===

h2
---

=====================================output=====================================
h1
===

h2
---

================================================================================
`;

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
Multi\\
Line  
Setext\\
Heading
=======

Multi\\
Line  
Setext\\
Heading
-------
=====================================output=====================================
Multi\\
Line  
Setext\\
Heading
=======

Multi\\
Line  
Setext\\
Heading
-------

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[foo]: /url 
  bar
===
=====================================output=====================================
[foo]: /url

bar
===

================================================================================
`;
